<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skyrien.soundremote.MainActivity"
    android:orientation="vertical"
    android:gravity="center">/


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_txt"
            android:textSize="24sp"
            android:gravity="center"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="">


            <ImageButton
                android:id="@+id/sound1_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@android:drawable/ic_media_play"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/sound1_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound1_txt"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/sound1_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sound1_path"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/sound2_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@android:drawable/ic_media_play"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/sound2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound2_txt"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/sound2_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sound2_path"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/sound3_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@android:drawable/ic_media_play"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/sound3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound3_txt"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/sound3_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sound3_path"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/connectionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Connected to: None"
            android:textAlignment="textEnd"
            android:visibility="invisible"
            />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
